2007-09-25  Francis Lachapelle  <flachapelle@inverse.ca>

	* SoObjects/Appointments/SOGoAptMailNotification.m 
	([SOGoAptMailNotification -appointmentURL]): set personal as the
	default calendar where to add the event.

	* UI/MainUI/SOGoUserHomePage.m ([SOGoUserHomePage +initialize]): 
	activate the SOGoUIxDefaultModule user defaults.

2007-09-21  Francis Lachapelle  <flachapelle@inverse.ca>

	* UI/SOGoUI/UIxComponent.m 
	([UIxComponent -shortUserNameForDisplay]): returns the string
	"wrongusernamepassword" when authentication failed.

2007-09-17  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailPartViewers/UIxMailPartICalViewer.m
	([UIxMailPartICalViewer -calendarFolder]): returns the "personal"
	entry of the Calendars parent folder.

	* UI/MailerUI/UIxMailListView.m ([UIxMailListView
	-messageSubject]): new accessor method to work-around a problem
	within SOPE where a subject could be returned as an NSData.

	* SoObjects/SOGo/SOGoParentFolder.m ([SOGoParentFolder
	-appendPersonalSources]): make sure the value of the "c_path4" of
	the returned rows are not NSNull, otherwise, discard them.

2007-09-16  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Contacts/SOGoContactGCSFolder.m ([SOGoContactGCSFolder
	-compare:otherFolder]): new overriden method that compares two
	contact foldes based on their class and then transfer the control
	to the super method in SOGoFolder.

	* SoObjects/Contacts/SOGoContactLDAPFolder.m
	([SOGoContactLDAPFolder -compare:otherFolder]): new method that
	compare two contact folders based on their class and then their
	display name.

	* SoObjects/SOGo/SOGoFolder.m ([SOGoFolder -compare:otherFolder]):
	new method for sorting folders. The folders are compared based on
	their ownership, whether they are a main folder and finally
	depending on their display name.

	* SoObjects/SOGo/SOGoObject.m ([SOGoObject
	-pathArrayToSOGoObject]): do not reorder the paths if the third
	element is an instance of NSNull.
